--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="./recipes/lasagna.html">Lasagna</a></p>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/salmon.html">Salmon</a></li>
+        <li><a href="./recipes/corn-dog.html">Corn Dog</a></li>
+    </ul>
 </body>
 </html>
