--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img alt="Recipe channel Image" src="./images/recipe-channel.webp">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/salmon.html">Salmon</a></li>
