--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Oggy Recipes Baze</h1>
     <img alt="Recipe channel Image" src="./images/recipe-channel.webp">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
