little css added

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home page
     </title>
 </head>
 <body>
-    <h1>Oggy Recipes Baze</h1>
-    <img alt="Recipe channel Image" src="./images/recipe-channel.webp">
+    <header class="header">
+        <img class="logo inline-elem" src="./images/logo.png"/>
+        <h3 class="inline-elem header-text">Oggy Recipes Baze</h3>
+    </header>
+    <h1>Welcome to Oggy Recipes</h1>
+    <img class="homepic" alt="Recipe channel Image" src="./images/recipe-channel.webp">
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/salmon.html">Salmon</a></li>
