--- a/recipes/corn-dog.html
+++ b/recipes/corn-dog.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>World's Best Corn Dog</h1>
+    <link rel="stylesheet" href="../style.css">
     <img src="../images/corn_dogs.webp" alt="Homemade Corn Dogs">
     <h2>Description</h2>
     <p>A corn dog is a sausage (usually a hot dog) that has been skewered, coated in a <br>
